--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>The title of my page</title>
 
-	<link rel="stylesheet" href="/css/simple-grid.css">
+	<!-- <link rel="stylesheet" href="css/simple-grid.css"> -->
 
 	<style type="text/css">
 	body {
@@ -39,20 +39,20 @@
 </head>
 <body>
 	<!-- HTML goes here -->
-	<div class='number center '>
+	<div class='numOne center number '>
 		<div class = 'random'></div>
 	</div>
 
-	<button class = 'clickButton' onclick="getRandom()">Click</button>
+	<!-- <button class = 'clickButton' onclick="getRandom()">Click</button> -->
 
 	<!-- simple-grid -->
 
 	<div class = 'row'>
-		<div class = 'col-4 numOne'>
-			4
+		<div class = 'col-4 numTwo center number' value='2'>
+			
 		</div>
-		<div class = 'col-4 numTwo'>
-			2
+		<div class = 'col-4 numThree center number' value='3'>
+			
 		</div>
 		<div class = 'col-4'>
 
