--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 	margin-right: auto;
 	}
 	.number{
+		margin: 10px;
 		width:auto;
 		height:100%;
 		color: blue;
@@ -39,25 +40,44 @@
 </head>
 <body>
 	<!-- HTML goes here -->
-	<div class='numOne center number '>
+
+	<div class='num center number '>
+			<div class = 'random'></div>
+		</div>
+	
+		<div class = 'row'>
+			<div class = 'col-4 num center number' value=''>
+				
+			</div>
+			<div class = 'col-4 num center number' value=''>
+				
+			</div>
+			<div class = 'col-4'>
+	
+			</div>
+				<!-- <button class = 'clickButton' onclick="getRandom()">Click</button> -->
+	
+		<!-- simple-grid -->
+		</div>
+
+	<!-- <div class='numOne center number '>
 		<div class = 'random'></div>
 	</div>
 
-	<!-- <button class = 'clickButton' onclick="getRandom()">Click</button> -->
-
-	<!-- simple-grid -->
-
 	<div class = 'row'>
-		<div class = 'col-4 numTwo center number' value='2'>
+		<div class = 'col-4 numTwo center number' value=''>
 			
 		</div>
-		<div class = 'col-4 numThree center number' value='3'>
+		<div class = 'col-4 numThree center number' value=''>
 			
 		</div>
 		<div class = 'col-4'>
 
-		</div>
-	</div>
+		</div> -->
+			<!-- <button class = 'clickButton' onclick="getRandom()">Click</button> -->
+
+	<!-- simple-grid -->
+	<!-- </div> -->
 
 
 
