--- a/index.html
+++ b/index.html
@@ -41,15 +41,14 @@
 <body>
 	<!-- HTML goes here -->
 
-	<div class='num center number '>
-			<div class = 'random'></div>
+	<div class='num center number numOne ' value=''>
 		</div>
 	
 		<div class = 'row'>
-			<div class = 'col-4 num center number' value=''>
+			<div class = 'col-4 num center number numTwo' value=''>
 				
 			</div>
-			<div class = 'col-4 num center number' value=''>
+			<div class = 'col-4 num center number numThree' value=''>
 				
 			</div>
 			<div class = 'col-4'>
