added message and counter

--- a/index.html
+++ b/index.html
@@ -59,28 +59,14 @@
 	
 			</div>
 				<!-- <button class = 'clickButton' onclick="getRandom()">Click</button> -->
+
+			<div class = 'message ' ></div>
+
+			<div class='counter '></div>
 	
-		<!-- simple-grid -->
 		</div>
 
-	<!-- <div class='numOne center number '>
-		<div class = 'random'></div>
-	</div>
 
-	<div class = 'row'>
-		<div class = 'col-4 numTwo center number' value=''>
-			
-		</div>
-		<div class = 'col-4 numThree center number' value=''>
-			
-		</div>
-		<div class = 'col-4'>
-
-		</div> -->
-			<!-- <button class = 'clickButton' onclick="getRandom()">Click</button> -->
-
-	<!-- simple-grid -->
-	<!-- </div> -->
 
 
 
@@ -88,26 +74,3 @@
 </body>
 </html>
 
-	<!-- <script>
-
-		document.addEventListener("DOMContentLoaded", function (event) {
-			let displayRandom = document.querySelector('.random')
-			let button = document.querySelector('.clickButton')
-
-
-
-			function getRandom() {
-				let randomNum = Math.random();
-				displayRandom.innerHTML = randomNum
-			}
-			getRandom()
-
-			button.addEventListener('click', function () {
-				getRandom()
-			});
-
-
-
-		});
-
-	</script> -->
