--- a/index.html
+++ b/index.html
@@ -10,14 +10,11 @@
   height: 100%;
   width: auto;
   margin-top: 50px;
-
   padding: 0;
-
   left: 0;
   top: 0;
   font-size: 100%;
 }
-
 	.center {
 	text-align: center;
 	margin-left: auto;
@@ -34,11 +31,9 @@
    		 border-width: 5px;
 			border-color: lightblue;
 	}
-
 	.yellow{
 		background-color: yellow
 	}
-
 	/* CSS goes here */
 	</style>
 </head>
@@ -59,55 +54,17 @@
 	
 			</div>
 				<!-- <button class = 'clickButton' onclick="getRandom()">Click</button> -->
+
+			<div class = 'message ' ></div>
+
+			<div class='counter '></div>
 	
-		<!-- simple-grid -->
 		</div>
 
-	<!-- <div class='numOne center number '>
-		<div class = 'random'></div>
-	</div>
 
-	<div class = 'row'>
-		<div class = 'col-4 numTwo center number' value=''>
-			
-		</div>
-		<div class = 'col-4 numThree center number' value=''>
-			
-		</div>
-		<div class = 'col-4'>
-
-		</div> -->
-			<!-- <button class = 'clickButton' onclick="getRandom()">Click</button> -->
-
-	<!-- simple-grid -->
-	<!-- </div> -->
 
 
 
 <script src="index.js"></script>
 </body>
 </html>
-
-	<!-- <script>
-
-		document.addEventListener("DOMContentLoaded", function (event) {
-			let displayRandom = document.querySelector('.random')
-			let button = document.querySelector('.clickButton')
-
-
-
-			function getRandom() {
-				let randomNum = Math.random();
-				displayRandom.innerHTML = randomNum
-			}
-			getRandom()
-
-			button.addEventListener('click', function () {
-				getRandom()
-			});
-
-
-
-		});
-
-	</script> -->
