--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 			<div class = 'col-4'>
 	
 			</div>
-				<!-- <button class = 'clickButton' onclick="getRandom()">Click</button> -->
+				<button class = 'clickButton' onclick="">Click</button>
 
 			<div class = 'message ' ></div>
 
